[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustgraph"
dynamic = ["version"]
authors = [{name = "trustgraph.ai", email = "security@trustgraph.ai"}]
description = "TrustGraph provides a means to run a pipeline of flexible AI processing components in a flexible means to achieve a processing pipeline."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "trustgraph-base>=1.8,<1.9",
    "trustgraph-bedrock>=1.8,<1.9",
    "trustgraph-cli>=1.8,<1.9",
    "trustgraph-embeddings-hf>=1.8,<1.9",
    "trustgraph-flow>=1.8,<1.9",
    "trustgraph-vertexai>=1.8,<1.9",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/trustgraph-ai/trustgraph"

[tool.setuptools]
packages = ["trustgraph"]

[tool.setuptools.dynamic]
version = {attr = "trustgraph.trustgraph_version.__version__"}