[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustgraph"
dynamic = ["version"]
authors = [{name = "trustgraph.ai", email = "security@trustgraph.ai"}]
description = "TrustGraph provides a means to run a pipeline of flexible AI processing components in a flexible means to achieve a processing pipeline."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "trustgraph-base>=2.4,<2.5",
    "trustgraph-bedrock>=2.4,<2.5",
    "trustgraph-cli>=2.4,<2.5",
    "trustgraph-embeddings-hf>=2.4,<2.5",
    "trustgraph-flow>=2.4,<2.5",
    "trustgraph-unstructured>=2.4,<2.5",
    "trustgraph-vertexai>=2.4,<2.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/trustgraph-ai/trustgraph"

[tool.setuptools]
packages = ["trustgraph"]

[tool.setuptools.dynamic]
version = {attr = "trustgraph.trustgraph_version.__version__"}